--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "lib-flexible": "^0.3.2",
+    "moment": "^2.26.0",
     "postcss-px2rem": "^0.3.0",
     "vant": "^2.8.6",
     "vue": "^2.6.11",
@@ -47,7 +48,9 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {
+      "no-debugger": 0
+    }
   },
   "browserslist": [
     "> 1%",
